<resources>
    <string name="app_name">Exos sup spe</string>
    <string name="main_menu">main_menu</string>
    <string name="exercices_de_premi_re_ann_e">Exercices de première année</string>
    <string name="mpsi">MPSI</string>
    <string name="pcsi">PCSI</string>
    <string name="bcpst">BCPST1</string>
    <string name="plus_de_2500_exercices_de_math_matiques_corrig_s_votre_disposition_gratuitement">Plus de 2500 exercices de mathématiques corrigés à votre disposition gratuitement !</string>
    <string name="pensez_soutenir_le_d_veloppement_en_nous_supportant">Pensez à soutenir le développement en nous supportant ou en contribuant !</string>
    <string name="ecs1">ECS1</string>
    <string name="ece1">ECE1</string>
    <string name="mp_mp">MP/MP*</string>
    <string name="psi_psi">PSI/PSI*</string>
    <string name="exercices_de_deuxi_me_ann_e">Exercices de deuxième année</string>
    <string name="pc_pc">PC/PC*</string>
    <string name="bcpst2">BCPST2</string>
    <string name="ecs2">ECS2</string>
    <string name="les_exercices_sont_rang_s_par_chapitre_et_sous_chapitre">Les exercices sont rangés par chapitre et sous-chapitre</string>
    <string name="title_activity_chapitres">Leanback Title</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>