<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#006937"
                tools:ignore="MissingConstraints"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:elevation="4dp"/>

            <TextView
                android:id="@+id/Nombre_d_exercices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/plus_de_n_exercices_de_math_matiques_corrig_s_votre_disposition_gratuitement"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/support_main_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/pensez_soutenir_le_d_veloppement_en_nous_supportant"
                android:textAlignment="center"
                android:textColor="#ff5733"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/Nombre_d_exercices"
                app:layout_constraintStart_toStartOf="@id/Nombre_d_exercices"
                app:layout_constraintTop_toBottomOf="@+id/Nombre_d_exercices" />

            <TextView
                android:id="@+id/Organisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/les_exercices_sont_rang_s_par_chapitre_et_sous_chapitre"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/support_main_text"
                app:layout_constraintStart_toStartOf="@+id/support_main_text"
                app:layout_constraintTop_toBottomOf="@+id/support_main_text" />

            <TextView
                android:id="@+id/exercices_de_premiere_annee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/exercices_de_premi_re_ann_e"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Organisation"
                tools:ignore="NotSibling" />

            <Button
                android:id="@+id/buttonMPSI"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/mpsi"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exercices_de_premiere_annee" />

            <Button
                android:id="@+id/buttonPCSI"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/pcsi"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/buttonMPSI"
                app:layout_constraintStart_toStartOf="@+id/buttonMPSI"
                app:layout_constraintTop_toBottomOf="@+id/buttonMPSI" />

            <Button
                android:id="@+id/buttonBCPST1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/bcpst"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/buttonPCSI"
                app:layout_constraintStart_toStartOf="@+id/buttonPCSI"
                app:layout_constraintTop_toBottomOf="@+id/buttonPCSI" />

            <Button
                android:id="@+id/buttonECS1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/ecs1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/buttonBCPST1"
                app:layout_constraintStart_toStartOf="@+id/buttonBCPST1"
                app:layout_constraintTop_toBottomOf="@+id/buttonBCPST1" />

            <Button
                android:id="@+id/buttonECE1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/ece1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/buttonECS1"
                app:layout_constraintStart_toStartOf="@+id/buttonECS1"
                app:layout_constraintTop_toBottomOf="@+id/buttonECS1" />

            <TextView
                android:id="@+id/exercices_de_deuxieme_annee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/exercices_de_deuxi_me_ann_e"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/buttonECE1"
                app:layout_constraintStart_toStartOf="@id/buttonECE1"
                app:layout_constraintTop_toBottomOf="@+id/buttonECE1"
                tools:ignore="NotSibling" />

            <Button
                android:id="@+id/buttonMP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/mp_mp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/exercices_de_deuxieme_annee"
                app:layout_constraintStart_toStartOf="@+id/exercices_de_deuxieme_annee"
                app:layout_constraintTop_toBottomOf="@+id/exercices_de_deuxieme_annee" />

            <Button
                android:id="@+id/buttonPSI"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/psi_psi"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/buttonMP"
                app:layout_constraintStart_toStartOf="@+id/buttonMP"
                app:layout_constraintTop_toBottomOf="@+id/buttonMP" />

            <Button
                android:id="@+id/buttonPC"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/pc_pc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/buttonPSI"
                app:layout_constraintStart_toStartOf="@+id/buttonPSI"
                app:layout_constraintTop_toBottomOf="@+id/buttonPSI" />

            <Button
                android:id="@+id/buttonBCPST2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/bcpst2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/buttonPC"
                app:layout_constraintStart_toStartOf="@+id/buttonPC"
                app:layout_constraintTop_toBottomOf="@+id/buttonPC" />

            <Button
                android:id="@+id/buttonECS2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/ecs2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/buttonBCPST2"
                app:layout_constraintStart_toStartOf="@+id/buttonBCPST2"
                app:layout_constraintTop_toBottomOf="@+id/buttonBCPST2" />

            <Button
                android:id="@+id/buttonECE2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#006937"
                android:paddingHorizontal="100dp"
                android:paddingTop="12dp"
                android:text="@string/ece2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/buttonECS2"
                app:layout_constraintStart_toStartOf="@+id/buttonECS2"
                app:layout_constraintTop_toBottomOf="@+id/buttonECS2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>